Disable antialiasing of borders again, for Linux only, to avoid the performance penalty of pushing/popping groups.  b=380473  r=vlad